--- a/style.css
+++ b/style.css
@@ -14,3 +14,17 @@ body {
     text-align: center;
     width: 300px;
 }
+#display {
+    width: 100%;
+    height: 50px;
+    text-align: right;
+    font-size: 1.5em;
+    padding: 10px;
+    border: none;
+    margin-bottom: 10px;
+}
+.buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+}
